Release 1.7 (xx-xx-2014)
 * General refactoring of functions and classes to make them more abstract and
   generic.
 * Added new experimental web server (Mune) based on webpy with command-line
   flag --web.  It's very incomplete but the idea is to keep making it a
   first-class citizen in subsequent releases.
 * Revamped all the search dialogs, and moved them to a new tab.

Release 1.6 (23-01-2012)

 * Fixed vulnerability for symlink attack in /tmp (Debian bug #651931).
 * Replaced top menu bar with a button.  This will also ease integration of
   Bokken in Inguma.
 * Fixed some usability bugs that we found in the previous release.
 * Fixed some crashes both in Linux and Windows 7.
 * Made Bokken more stable when running in a system-wide installation like a
   standard Debian package.

Release 1.5 (07-12-2011)

 * Full support for Radare2.  Now the opening dialog allows one to choose
   the engine.
 * Now you can open Java, mach0 and more ELF variants.  The rest of formats
   supported by radare2 are untested.
 * Disassembly has been enhanced: more precise, w/full dump of sections,
   symbols and more.
 * Several new tabs: Flowgraph, File info, Binary diffing, URL elements.
 * Enhanced support for web analysis.
 * Awesome code navigation à la HTML.
 * Crossed references and comments in code.
 * Interactive hexdump.
 * Advanced calculator.
 * x86 RCE cheat sheet.
 * Lots and lots of enhancements in the UI, from the general layout to
   polished details, the interface has taken a lot of work.