@@ -1,10 +1,16 @@
 Release 1.7 (xx-xx-2014)
+
  * General refactoring of functions and classes to make them more abstract and
    generic.
  * Added new experimental web server (Mune) based on webpy with command-line
    flag --web.  It's very incomplete but the idea is to keep making it a
    first-class citizen in subsequent releases.
- * Revamped all the search dialogs, and moved them to a new tab.
+ * Fixed usability bugs.
+ * Revamped all the search dialogs, moved them to a new tab and fixed some
+   bugs in the meantime.
+ * Added compatibility with radare2 0.9.8-rc1.
+ * Added support for base address in radare.
+ * Updated xdot to latest version.
 
 Release 1.6 (23-01-2012)
 
